--- a/less/style.less
+++ b/less/style.less
@@ -1,907 +1,20 @@
-/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
-
-/**
- * 1. Set default font family to sans-serif.
- * 2. Prevent iOS text size adjust after orientation change, without disabling
- *    user zoom.
- */
+//Подключаем шрифт PT Sans
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic);
-
-html {
-  font-family: sans-serif; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/**
- * Remove default margin.
- */
-
-body {
-  margin: 0;
-}
-
-/* HTML5 display definitions
-   ========================================================================== */
-
-/**
- * Correct `block` display not defined for any HTML5 element in IE 8/9.
- * Correct `block` display not defined for `details` or `summary` in IE 10/11
- * and Firefox.
- * Correct `block` display not defined for `main` in IE 11.
- */
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block;
-}
-
-/**
- * 1. Correct `inline-block` display not defined in IE 8/9.
- * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
- */
-
-audio,
-canvas,
-progress,
-video {
-  display: inline-block; /* 1 */
-  vertical-align: baseline; /* 2 */
-}
-
-/**
- * Prevent modern browsers from displaying `audio` without controls.
- * Remove excess height in iOS 5 devices.
- */
-
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
-/**
- * Address `[hidden]` styling not present in IE 8/9/10.
- * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
- */
-
-[hidden],
-template {
-  display: none;
-}
-
-/* Links
-   ========================================================================== */
-
-/**
- * Remove the gray background color from active links in IE 10.
- */
-
-a {
-  background-color: transparent;
-}
-
-/**
- * Improve readability when focused and also mouse hovered in all browsers.
- */
-
-a:active,
-a:hover {
-  outline: 0;
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
- */
-
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-
-/**
- * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
- */
-
-b,
-strong {
-  font-weight: bold;
-}
-
-/**
- * Address styling not present in Safari and Chrome.
- */
-
-dfn {
-  font-style: italic;
-}
-
-/**
- * Address variable `h1` font-size and margin within `section` and `article`
- * contexts in Firefox 4+, Safari, and Chrome.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/**
- * Address styling not present in IE 8/9.
- */
-
-mark {
-  background: #ff0;
-  color: #000;
-}
-
-/**
- * Address inconsistent and variable font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` affecting `line-height` in all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sup {
-  top: -0.5em;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove border when inside `a` element in IE 8/9/10.
- */
-
-img {
-  border: 0;
-}
-
-/**
- * Correct overflow not hidden in IE 9/10/11.
- */
-
-svg:not(:root) {
-  overflow: hidden;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * Address margin not present in IE 8/9 and Safari.
- */
-
-figure {
-  margin: 1em 40px;
-}
-
-/**
- * Address differences between Firefox and other browsers.
- */
-
-hr {
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
-
-/**
- * Contain overflow in all browsers.
- */
-
-pre {
-  overflow: auto;
-}
-
-/**
- * Address odd `em`-unit font size rendering in all browsers.
- */
-
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * Known limitation: by default, Chrome and Safari on OS X allow very limited
- * styling of `select`, unless a `border` property is set.
- */
-
-/**
- * 1. Correct color not being inherited.
- *    Known issue: affects color of disabled elements.
- * 2. Correct font properties not being inherited.
- * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  color: inherit; /* 1 */
-  font: inherit; /* 2 */
-  margin: 0; /* 3 */
-}
-
-/**
- * Address `overflow` set to `hidden` in IE 8/9/10/11.
- */
-
-button {
-  overflow: visible;
-}
-
-/**
- * Address inconsistent `text-transform` inheritance for `button` and `select`.
- * All other form control elements do not inherit `text-transform` values.
- * Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
- * Correct `select` style inheritance in Firefox.
- */
-
-button,
-select {
-  text-transform: none;
-}
-
-/**
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video` controls.
- * 2. Correct inability to style clickable `input` types in iOS.
- * 3. Improve usability and consistency of cursor style between image-type
- *    `input` and others.
- */
-
-button,
-html input[type="button"], /* 1 */
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button; /* 2 */
-  cursor: pointer; /* 3 */
-}
-
-/**
- * Re-set default cursor for disabled elements.
- */
-
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-
-/**
- * Remove inner padding and border in Firefox 4+.
- */
-
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-/**
- * Address Firefox 4+ setting `line-height` on `input` using `!important` in
- * the UA stylesheet.
- */
-
-input {
-  line-height: normal;
-}
-
-/**
- * It's recommended that you don't attempt to style these elements.
- * Firefox's implementation doesn't respect box-sizing, padding, or width.
- *
- * 1. Address box sizing set to `content-box` in IE 8/9/10.
- * 2. Remove excess padding in IE 8/9/10.
- */
-
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Fix the cursor style for Chrome's increment/decrement buttons. For certain
- * `font-size` values of the `input`, it causes the cursor style of the
- * decrement button to change from `default` to `text`.
- */
-
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
- * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
- *    (include `-moz` to future-proof).
- */
-
-input[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box; /* 2 */
-  box-sizing: content-box;
-}
-
-/**
- * Remove inner padding and search cancel button in Safari and Chrome on OS X.
- * Safari (but not Chrome) clips the cancel button when the search input has
- * padding (and `textfield` appearance).
- */
-
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * Define consistent border, margin, and padding.
- */
-
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-
-/**
- * 1. Correct `color` not being inherited in IE 8/9/10/11.
- * 2. Remove padding so people aren't caught out if they zero out fieldsets.
- */
-
-legend {
-  border: 0; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Remove default vertical scrollbar in IE 8/9/10/11.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * Don't inherit the `font-weight` (applied by a rule above).
- * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
- */
-
-optgroup {
-  font-weight: bold;
-}
-
-/* Tables
-   ========================================================================== */
-
-/**
- * Remove most spacing between table cells.
- */
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-td,
-th {
-  padding: 0;
-}
-
-/* 
-*Normalize.css over 
-*/
-
-body {
-	font-family: "PT Sans", sans-serif;
-	font-size: 14px;
-}
-
-@back-blue: #81b3d2;
-@back-grey: #eee;
-@nav-border__top: #9ac2db;
-@nav-border__bottom: #678fa8;
-@grey-border__bottom: #d6d6d6;
-@back-blue--hover: darken(@back-blue, 20%);
-
-.master-wrapper {
-	width: 320px;
-	margin: 0 auto;
-}
-.main-nav {
-	&__list {
-		background-color: @back-blue;
-		padding: 0;
-		margin: 0;
-	}
-	&__list-item {
-		list-style: none;
-		text-align: center;
-		background-color: @back-blue;
-		border-top: 1px solid @nav-border__top;
-		border-bottom: 1.5px solid @nav-border__bottom;
-		position: relative;
-	}
-	&__list-item:first-child {
-		border-top: none;
-	}
-	&__list-item:last-child {
-		border-bottom: none;
-		box-shadow: inset 0px -2px 5px 0px rgba(0, 0, 0, .2); 
-	}
-	&__list-item  a {
-		display: block;
-		font-size: 18px;
-		font-weight: bold;
-		text-decoration: none;
-		text-transform: uppercase;
-		line-height: 40px;
-		padding: 7.0px 0px;
-		color: white;
-		&:hover {
-			background: @nav-border__bottom;	
-		}
-		&:active {
-			color: darken(white, 20%);	
-		}
-	}
-
-	.btn--close-menu {
-		position: absolute;
-		right: 6%;
-		margin-top: -12%;
-		background: url("../img/btn--close-menu.png") no-repeat;
-		width: 23px;
-		height: 23px;
-		border: 0;
-		outline: none;
-	}
-	.btn--close-menu:hover {
-		opacity: 0.8;
-	}
-	.btn--close-menu:active {
-		opacity: 0.2;
-	}
-}
-
-.main-header {
-	&__rubber-bottom {
-		position: relative;
-		text-align: center;
-	}
-	.btn--open-menu {
-		position: absolute;
-		right: 6.2%;
-		margin-top: 5.2%;
-		background: url("../img/btn--open-menu.png") no-repeat;
-		width: 23px;
-		height: 23px;
-		border: 0;
-		outline: none;
-	}
-	.btn--open-menu:hover {
-		opacity: 0.8;
-	}
-	.btn--open-menu:active {
-		opacity: 0.2;
-	}
-	&__logo-line {
-		height: 56px;
-	}
-	&__logo {
-		z-index: 10;
-	}
-	&__promo {
-		background: url("/img/promo__background--form.png") no-repeat 50% 100%, 
-					url("/img/promo__background.jpg") no-repeat 53.3% 0;
-		padding: 47px 5px 44px;
-		z-index: 5;
-	}
-}
-
-.reasons {	
-	.reasons-header {
-		text-align: center;
-		&__title {
-			font-weight: bold;
-			font-size: 18px;
-			line-height: 26px;
-			text-transform: uppercase;
-			width: 270px;
-			margin: 0 auto;
-			padding: 40px 0 26px;
-		}
-		&__about {
-			padding-bottom: 5px;
-			margin: 0 auto;
-			text-transform: uppercase;
-			width: 300px;
-			line-height: 26px;
-		}
-	}
-	.reason-item {
-		text-transform: uppercase;
-		text-align: center;
-		padding: 5px 0 0;
-		&__title {
-			font-size: 18px;
-			font-weight: bold;
-			line-height: 26px;
-			color: white;
-			padding: 33px 0 0;
-			margin: 0;
-		}
-		&__number {
-			margin: 0;
-			font-size: 14px;
-			line-height: 21px;
-			color: white;
-			padding: 9px 0 15px;
-		}
-		&__about{
-			margin: 0 auto;
-			line-height: 21px;
-			color: white;
-			width: 270px;
-			padding-bottom: 40px;
-		}
-		&--image {
-			width: 320px;
-			height: 256px;
-			overflow: hidden;
-			margin: 0;
-			padding: 0;
-		}
-		&--image img{
-			margin-left: -32.2%;	
-		}
-		&--first {
-			background: url("/img/reason-item--form.png") no-repeat top center;	
-		}
-		&--first h2 {
-			padding: 72px 0 0;
-		}
-		&--blue {
-			background-color: @back-blue;
-		}
-		&--img {
-			list-style: none;
-			position: relative;
-			text-align: left;
-		}
-		&--img h2, &--img p{
-			color: black;
-			width: 210px;
-			margin: 0 10px 0 70px;
-		}
-		&--img h2 {
-			padding: 23px 0 0px;
-		}
-		&--img p {
-			padding: 14px 0 0;
-		}
-		&--img img {
-			position: absolute;
-			left: 7.0%;
-			top: 16%;
-		}
-		&--grey h2, &--grey p {
-			color: black;
-			width: 251px;
-			margin: 0 auto;
-		}
-		&--grey {
-			color: black;
-			border-bottom: 1px solid @grey-border__bottom;
-			padding-bottom: 20px;
-			&:last-child {
-				border: 0;	
-			}
-		}
-		&--grey h2 {
-			padding: 21px 0 0;	
-		}
-		&--grey p {
-			padding: 8px;	
-		}
-	}
-	&-list {
-		padding: 11px 0px 38px;
-		margin: 0;
-	}
-	&-wrapper:last-child {
-		background-color: @back-grey;
-		padding: 0 20px;
-	}	
-}
-
-.hotels {
-	&__header {
-		text-transform: uppercase;
-		text-align: center;
-		padding: 5px 5px 10px;
-	}
-	&__header-title {
-		font-size: 21px;
-		line-height: 26px;
-		font-weight: bold;
-	}
-	&__header-about {
-		font-size: 14px;
-		line-height: 24px;
-		width: 270px;
-		margin: 0 auto;
-	}
-	.btn--search {
-		background-color: #766357;
-		color: white;
-		text-transform: uppercase;
-		font-size: 18px;
-		font-weight: bold;
-		line-height: 26px;
-		text-align: center;
-		padding: 30px 5px;
-	}
-}
-
-.search-hotel {
-	text-transform: uppercase;
-	font-weight: bold;
-	line-height: 26px;
-	padding: 0 20px;
-	font-size: 0;
-	&__label {
-		display: block;
-		font-size: 14px;
-		padding: 7px 14px;
-	}
-	&__input {
-		display: block;
-		width: 256px;
-		border: 0;
-		outline: none;
-		padding: 5px 12px;
-		font-size: 14px;
-		line-height: 26px;
-		margin-bottom: 15px;
-		background: #f2f2f2 url("/img/search-hotel__date.png") no-repeat 96% 43%;
-		&--count {
-			display: inline-block;
-			width: 12px;
-			height: 28px;
-			text-align: center;
-			vertical-align: top;
-			font-size: 14px;
-			background: #f2f2f2;
-		}
-	}
-	&__control {
-		display: inline-block;
-		vertical-align: top;
-		background-color: #f2f2f2;
-		border: 0;
-		width: 38px;
-		height: 38px;
-		outline: none;
-		&--plus {
-			background: url("/img/search-hotel__control--plus.jpg")	no-repeat 50% 50%;
-		}
-		&--minus {
-			background: url("/img/search-hotel__control--minus.jpg") no-repeat 50% 50%;
-		}
-		&:hover {
-			opacity: 0.7;
-		}
-		&:active {
-			opacity: 0.4;
-		}
-	}
-	&__column {
-		width: 40%;	
-		float: left;
-		&::after {
-			display: block;
-			visibility: hidden;
-			clear: both;
-			height: 0;
-			content: "";   
-		}
-		&:last-of-type {
-			float: right;	
-		}
-	}
-	.btn--submit {
-		background-color: @back-blue;
-		text-transform: uppercase;
-		color: white;
-		border: 0;
-		font-size: 21px;
-		line-height: 26px;
-		text-align: center;
-		outline: none;
-		padding: 16px;
-		width: 280px;
-		margin-top: 31px;
-		margin-bottom: 49px;
-		&:hover {
-			background: @back-blue--hover;	
-		}
-		&:active {
-			padding: 18px 16px 14px;
-		}
-	}
-}
-
-.main-footer {
-	position: relative;
-	&__map {
-		width: 320px;
-		height: 593px;
-		z-index: 1;
-	}
-	&::before {
-		content: "";
-		position: absolute;
-		width: 320px;
-		height: 50px;
-		top: 0;
-		box-shadow: inset 0 12px 30px -13px grey;	
-		z-index: 10;
-	}
-	&__links {
-		position: absolute;
-		background: rgba(255, 255, 255, .8);
-		text-align: center;
-		width: 100%;
-		bottom: 0;
-		min-height: 233px;
-		&::after {
-			display: block;
-			visibility: hidden;
-			clear: both;
-			height: 0;
-			content: ""; 
-		}	
-	}
-		&__hashtag {
-			padding-top: 26px;
-			padding-bottom: 36px;
-		}
-		&__hashtag a {
-			text-decoration: none;	
-			text-transform: uppercase;
-			font-weight: bold;
-			font-size: 21px;
-			line-height: 26px;
-			color: black;
-			&:hover {
-				color: red;
-			}
-			&:active {
-				color: red;
-				text-decoration: underline;
-			}
-		}
-	.social {
-		width: 150px;
-		margin: 0 auto;
-		font-size: 0;
-		padding-bottom: 29px;
-		&__btn {
-			content: "";
-			display: inline-block;
-			width: 46px;
-			height: 48px;
-			margin-right: 6px;
-			vertical-align: middle;
-			&:last-child {
-				margin-right: 0;
-			}
-			&--twitter {
-				background: @back-blue url("/img/social__btn--twitter.png") no-repeat 50% 47%;
-				&:hover{
-					background: @back-blue--hover url("/img/social__btn--twitter.png") no-repeat 50% 47%;
-				}
-				&:active{
-					opacity: 0.7;
-				}
-			}
-			&--facebook {
-				background: @back-blue url("/img/social__btn--facebook.png") no-repeat 50% 45%;
-				&:hover{
-					background: @back-blue--hover url("/img/social__btn--facebook.png") no-repeat 50% 45%;
-				}
-				&:active{
-					opacity: 0.7;
-				}
-			}
-			&--youtube {
-				background: @back-blue url("/img/social__btn--youtube.png") no-repeat 50% 50%;
-				&:hover{
-					background: @back-blue--hover url("/img/social__btn--youtube.png") no-repeat 50% 50%;
-				}
-				&:active{
-					opacity: 0.7;
-				}
-			}
-		}
-	}
-	&__links-copyright{
-		font-size: 14px;
-		line-height: 26px;
-		text-transform: uppercase;
-		width: 220px;
-		margin: 0 auto;
-		& p {
-			display: inline-block;
-		}
-		&-a {
-			display: inline-block;
-			background: url("/img/link-copyright-a.png") no-repeat 50% 50%;
-			width: 27px;
-			height: 30px;
-			display: inline-block;
-			vertical-align: middle;
-			padding: 0 8px;
-			&:hover {
-				opacity: 0.8;
-			}
-			&:active {
-				opacity: 0.4;
-			}
-		}
-		&-htmlacademy {
-			display: inline-block;
-			background: url("/img/link-copyright-htmlacademy.png") no-repeat 50% 50%;
-			width: 27px;
-			height: 33px;
-			vertical-align: middle;
-			margin-left: 7px;
-			&:hover {
-				opacity: 0.8;
-			}
-			&:active {
-				opacity: 0.4;
-			}
-		}
-	}
-}
+//Подключаем нормалайз
+@import "1. normalize.less";
+//Подключаем оболочку
+@import "2. wrapper.less";
+//Подключаем переменные
+@import "3. variables.less";
+//Подключаем кнопки
+@import "4. buttons.less";
+//Подключаем меню
+@import "5. navigation.less";
+//Подлючаем шапку
+@import "6. main-header.less";
+//Подключаем блок причин
+@import "7. reasons.less";
+//Подключаем секцию отелей
+@import "8. hotels.less";
+//Подключаем подвал
+@import "9. main-footer.less";
