--- a/less/style.less
+++ b/less/style.less
@@ -1,20 +1,63 @@
-//Подключаем шрифт PT Sans
+/* Foundation - Zero layer
+---------------------------------------------------------------------------------- */
+
+/* Fonts */
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic);
-//Подключаем нормалайз
-@import "1. normalize.less";
-//Подключаем оболочку
-@import "2. wrapper.less";
-//Подключаем переменные
-@import "3. variables.less";
-//Подключаем кнопки
-@import "4. buttons.less";
-//Подключаем меню
-@import "5. navigation.less";
-//Подлючаем шапку
-@import "6. main-header.less";
-//Подключаем блок причин
-@import "7. reasons.less";
-//Подключаем секцию отелей
-@import "8. hotels.less";
-//Подключаем подвал
-@import "9. main-footer.less";
+/* /Fonts */
+
+/* Normalize */
+@import "../less/normalize.less";
+/* /Normalize */
+
+/* /Foundation 
+---------------------------------------------------------------------------------- */
+
+/* Base - First layer
+---------------------------------------------------------------------------------- */
+
+/* Buttons */
+@import "../less/base/buttons.less";
+/* /Buttons */
+
+/* /Base 
+---------------------------------------------------------------------------------- */
+
+/* Project - Second layer
+---------------------------------------------------------------------------------- */
+
+/* Wrapper */
+@import "../less/project/wrapper.less";
+/* /Wrapper */
+
+/* Navigation */
+@import "../less/project/navigation.less";
+/* /Navigation */
+
+/* Main-Header */
+@import "../less/project/main-header.less";
+/* /Main-Header */
+
+/* Reasons */
+@import "../less/project/reasons.less";
+/* /Reasons */
+
+/* Hotels */
+@import "../less/project/hotels.less";
+/* /Hotels */
+
+/* Main-Footer */
+@import "../less/project/main-footer.less";
+/* /Main-Footer */
+
+/* /Project 
+---------------------------------------------------------------------------------- */
+
+/* Cosmetic - Third layer
+---------------------------------------------------------------------------------- */
+
+/* Variables */
+@import "../less/cosmetic/variables.less";
+/* /Variables */
+
+/* /Cosmetic
+---------------------------------------------------------------------------------- */
